# RAGLeakLab

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
baselines/v1/: report.json
data/attacks/: canary_extraction.yaml  verbatim_extraction.yaml
data/corpus_private_canary/: doc_api_security.txt  doc_database_config.txt
data/corpus_public/: doc_data_processing.txt  doc_ml_overview.txt
docs/: ARCHITECTURE.md  CI.md  REPORT_SCHEMA.md  threat_model.md
docs/threats/: canary.md  membership.md  verbatim.md
examples/: ragleaklab.yaml  run_attacks.py  run_pipeline.py  sample_report.json  sample_runs.jsonl
src/ragleaklab/: __init__.py  __main__.py  config.py
src/ragleaklab/attacks/: __init__.py  catalog.py  runner.py  schema.py
src/ragleaklab/corpus/: __init__.py  canary.py  chunking.py  loader.py
src/ragleaklab/metrics/: __init__.py  canary.py  consistency.py  membership.py  paraphrase.py  verbatim.py  verdict.py
src/ragleaklab/packs/: __init__.py
src/ragleaklab/packs/v1/: canary-basic.yaml  (+2 more)
src/ragleaklab/rag/: __init__.py  context.py  generator.py  pipeline.py  retriever.py  types.py
src/ragleaklab/regression/: __init__.py  diff.py
src/ragleaklab/reporting/: __init__.py  export.py  schema.py
src/ragleaklab/targets/: __init__.py  base.py  http.py  inprocess.py
tests/: test_attacks.py  test_canary.py  test_cli_e2e.py  test_config.py  test_consistency.py  test_export.py  test_http_target.py  test_loader.py  test_metrics.py  test_packs.py  test_rag.py  test_regression_diff.py  test_smoke.py
